# network_routing_tui

./: .gitignore  README.md  TODO.md  error.py  graph.py  graph.txt  pyproject.toml  test.txt
experiments/2_devious_triangle/: devious_triangle.txt  test.py
experiments/2b_convergence_speed/: counter109.txt  counter113.txt  counter128.txt  counter182.txt  counter195.txt  counter31.txt  counter33.txt  counter40.txt  counter42.txt  counter61.txt  counter63.txt  counter66.txt  counter77.txt  devious2.txt  table.json  temp.txt  test.py  test2.py  test3.py  test4.py
experiments/3a_dv_enhanced_performance/: test.py
experiments/4_remarkable_graphs/: results.txt  test.py  test2.py
report/: report.tex
src/network_routing_tui/: __main__.py  cli.py  error.py  exceptions.py  graph.py  graph_generator.py  layout.css  link_state.py  measurement.py  network_routing.py  routing_table.py  tui.py
tests/: graph.txt  test.py  test.txt  test2.py
